Add simple UDS echo client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,14 @@
 
 project(app VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+find_package(Qt5 REQUIRED COMPONENTS Core Quick Network)
 
 add_executable(server
   server.cpp
@@ -12,3 +18,11 @@ add_executable(server
   socket.cpp
   socket.h
 )
+
+add_executable(client
+  client.cpp
+  client.h
+  main.cpp
+  qml.qrc
+)
+target_link_libraries(client PRIVATE Qt5::Core Qt5::Quick Qt5::Network)
